--- a/frontend/templates/enter.html
+++ b/frontend/templates/enter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="enter.css">
+    <link rel="stylesheet" href="/css/enter.css">
     <link rel="stylesheet" href="boxshake.css">
     <title>Document</title>
 </head>
@@ -26,5 +26,5 @@
     </div>
     <div class="loginimg"><img src="/loginimg.jpg" alt=""></div>
 </body>
-<script src="/enter.js"></script> 
+<script src="/js/enter.js"></script> 
 </html>
