--- a/frontend/templates/signin.html
+++ b/frontend/templates/signin.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="enter.css">
-    <link rel="stylesheet" href="boxshake.css">
+    <link rel="stylesheet" href="/css/enter.css">
+    
     <title>Document</title>
 </head>
 <body>
@@ -43,6 +43,6 @@
 
 <div class="loginimg"><img src="/loginimg.jpg" alt=""></div>
 </body>
-<script src="/enter.js"></script>
+<script src="/js/enter.js"></script>
 
 </html>
