--- a/frontend/css/chat.css
+++ b/frontend/css/chat.css
@@ -14,7 +14,7 @@ body{
     background-color: black;
     position: relative;
     overflow: hidden;
-  background-image: url("istockphoto-1215293908-612x612.jpg");
+  background-image: url("/images/istockphoto-1215293908-612x612.jpg");
 
 }
 .logo{
@@ -90,10 +90,10 @@ offset-rotate: auto;
     position: absolute;
     left: 3vw;
     top: -6vh;
-    background-image: url(hand-drawn-vector-doodles-set-600nw-1425794720.webp);
+    background-image: url(/images/hand-drawn-vector-doodles-set-600nw-1425794720.webp);
     background-size: cover;
     -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
+    background-clip: text;
 }
 .chatarea{
     width: 60vw;
@@ -377,7 +377,7 @@ outline: none;
     overflow: hidden;
     font-size: 1.2vw;
     background-color: rgb(0, 0, 0);
-    background-image: url(sendwhite-removebg-preview.png);
+    background-image: url(/images/sendwhite-removebg-preview.png);
     background-size: 3vw;
     background-position-x: 11px;
     background-repeat: no-repeat;
@@ -480,7 +480,7 @@ outline: none;
     background-color: aliceblue;
     left: 1vw;
     border-radius: 20px 20px 20px 0px;
-    background-image: url(personalmsg.jpg);
+    background-image: url(/images/personalmsg.jpg);
     background-repeat: no-repeat;
     background-size: 3.5vw;
     background-position-x: 0vw;
